--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-REACT_APP_GRAPHQL_URL="https://api.jobmaker.lc/graphql"
-#REACT_APP_GRAPHQL_URL="http://localhost:9081/graphql"
+REACT_APP_GRAPHQL_URL="https://api.myapp.lc/graphql"
+
+#localhost:5053/graphql
+#HOST='myapp.lc'
+
+#DANGEROUSLY_DISABLE_HOST_CHECK='true'
