--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@testing-library/user-event": "^7.2.0",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
     "@typescript-eslint/parser": "^2.12.0",
+    "ag-grid-community": "^22.1.1",
+    "ag-grid-react": "^22.1.1",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link": "^1.2.13",
@@ -57,6 +59,7 @@
     "jest-watch-typeahead": "0.4.2",
     "mdi-material-ui": "^6.9.0",
     "mini-css-extract-plugin": "^0.8.2",
+    "namor": "^2.0.2",
     "notistack": "^0.9.7",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
@@ -73,6 +76,8 @@
     "react-final-form": "^6.3.3",
     "react-i18next": "^11.2.6",
     "react-router-dom": "^5.1.2",
+    "react-table": "^7.0.0-rc.15",
+    "react-window": "^1.8.5",
     "resolve": "^1.13.1",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.0",
