--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-dom": "^16.12.0",
     "react-final-form": "^6.3.3",
     "react-i18next": "^11.2.7",
+    "react-joyride": "^2.2.1",
     "react-router-dom": "^5.1.2",
     "react-table": "^7.0.0-rc.15",
     "react-window": "^1.8.5",
