--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
     "@apollo/react-hooks": "^3.1.3",
     "@babel/core": "^7.7.7",
     "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.8.0",
+    "@material-ui/core": "^4.8.1",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/pickers": "^3.2.8",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^8.0.2",
-    "@typescript-eslint/eslint-plugin": "^2.12.0",
-    "@typescript-eslint/parser": "^2.12.0",
+    "@typescript-eslint/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/parser": "^2.13.0",
     "ag-grid-community": "^22.1.1",
     "ag-grid-react": "^22.1.1",
     "apollo-cache-inmemory": "^1.6.5",
@@ -60,6 +60,7 @@
     "mdi-material-ui": "^6.10.0",
     "mini-css-extract-plugin": "^0.9.0",
     "namor": "^2.0.2",
+    "node-sass": "^4.13.0",
     "notistack": "^0.9.7",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
@@ -83,7 +84,7 @@
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.0",
     "semver": "^7.1.1",
-    "style-loader": "^1.1.1",
+    "style-loader": "^1.1.2",
     "terser-webpack-plugin": "^2.3.1",
     "ts-pnp": "1.1.5",
     "url-loader": "^3.0.0",
