--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
     "@babel/core": "^7.7.7",
-    "@date-io/date-fns": "^1.3.13",
-    "@material-ui/core": "^4.8.1",
+    "@date-io/date-fns": "^2.0.1",
+    "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/pickers": "^3.2.8",
-    "@svgr/webpack": "4.3.3",
+    "@svgr/webpack": "^5.0.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^8.0.2",
-    "@typescript-eslint/eslint-plugin": "^2.13.0",
-    "@typescript-eslint/parser": "^2.13.0",
+    "@testing-library/user-event": "^8.0.3",
+    "@typescript-eslint/eslint-plugin": "^2.15.0",
+    "@typescript-eslint/parser": "^2.15.0",
     "ag-grid-community": "^22.1.1",
     "ag-grid-react": "^22.1.1",
     "apollo-cache-inmemory": "^1.6.5",
@@ -31,14 +31,14 @@
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "classnames": "^2.2.6",
-    "css-loader": "^3.4.0",
-    "date-fns": "^2.8.1",
+    "css-loader": "^3.4.2",
+    "date-fns": "^2.9.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.8.0",
     "eslint-config-react-app": "^5.1.0",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-flowtype": "^4.5.2",
+    "eslint-plugin-flowtype": "^4.5.3",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "^7.17.0",
@@ -49,7 +49,7 @@
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
     "html-webpack-plugin": "4.0.0-beta.5",
-    "i18next": "^19.0.2",
+    "i18next": "^19.0.3",
     "i18next-browser-languagedetector": "^4.0.1",
     "i18next-resource-store-loader": "^0.1.2",
     "identity-obj-proxy": "3.0.0",
@@ -80,15 +80,15 @@
     "react-router-dom": "^5.1.2",
     "react-table": "^7.0.0-rc.15",
     "react-window": "^1.8.5",
-    "resolve": "^1.14.1",
+    "resolve": "^1.14.2",
     "resolve-url-loader": "3.1.1",
-    "sass-loader": "8.0.0",
+    "sass-loader": "^8.0.1",
     "semver": "^7.1.1",
     "style-loader": "^1.1.2",
-    "terser-webpack-plugin": "^2.3.1",
+    "terser-webpack-plugin": "^2.3.2",
     "ts-pnp": "1.1.5",
     "url-loader": "^3.0.0",
-    "webpack": "^4.41.4",
+    "webpack": "^4.41.5",
     "webpack-dev-server": "^3.10.1",
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1"
