--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@date-io/date-fns": "^2.0.1",
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.39",
     "@material-ui/pickers": "^3.2.8",
     "@svgr/webpack": "^5.0.1",
     "@testing-library/jest-dom": "^4.2.4",
