--- a/package.json
+++ b/package.json
@@ -3,97 +3,93 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.3",
-    "@babel/core": "^7.7.7",
-    "@date-io/date-fns": "^2.0.1",
-    "@material-ui/core": "^4.8.3",
-    "@material-ui/icons": "^4.5.1",
+    "@apollo/client": "^3.3.15",
+    "@apollo/react-hooks": "^4.0.0",
+    "@babel/core": "^7.13.15",
+    "@date-io/date-fns": "^2.10.8",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.39",
-    "@material-ui/pickers": "^3.2.8",
-    "@svgr/webpack": "^5.0.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^8.0.3",
-    "@typescript-eslint/eslint-plugin": "^2.15.0",
-    "@typescript-eslint/parser": "^2.15.0",
-    "ag-grid-community": "^22.1.1",
-    "ag-grid-react": "^22.1.1",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
-    "apollo-link": "^1.2.13",
-    "apollo-link-context": "^1.0.19",
-    "apollo-link-error": "^1.1.12",
-    "apollo-link-http": "^1.5.16",
-    "babel-eslint": "10.0.3",
-    "babel-jest": "^24.9.0",
-    "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.5",
-    "babel-preset-react-app": "^9.1.0",
-    "camelcase": "^5.3.1",
-    "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "classnames": "^2.2.6",
-    "css-loader": "^3.4.2",
-    "date-fns": "^2.9.0",
+    "@material-ui/pickers": "^3.3.10",
+    "@svgr/webpack": "^5.5.0",
+    "@testing-library/jest-dom": "^5.11.10",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^12.1.10",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "ag-grid-community": "^25.1.0",
+    "ag-grid-react": "^25.1.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-named-asset-import": "^0.3.7",
+    "babel-preset-react-app": "^10.0.0",
+    "camelcase": "^6.2.0",
+    "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "classnames": "^2.3.1",
+    "css-loader": "^5.2.2",
+    "date-fns": "^2.21.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^6.8.0",
-    "eslint-config-react-app": "^5.1.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-flowtype": "^4.5.3",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "^7.17.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "file-loader": "^5.0.2",
-    "final-form": "^4.18.6",
-    "fs-extra": "^8.1.0",
-    "graphql": "^14.5.8",
-    "graphql-tag": "^2.10.1",
-    "html-webpack-plugin": "4.0.0-beta.5",
-    "i18next": "^19.0.3",
-    "i18next-browser-languagedetector": "^4.0.1",
+    "eslint": "^7.24.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-loader": "^4.0.2",
+    "eslint-plugin-flowtype": "^5.7.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.3.5",
+    "eslint-plugin-json": "^2.1.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
+    "final-form": "^4.20.2",
+    "fs-extra": "^9.1.0",
+    "graphql": "^15.5.0",
+    "graphql-tag": "^2.11.0",
+    "html-webpack-plugin": "^4.5.0",
+    "i18next": "^20.2.1",
+    "i18next-browser-languagedetector": "^6.1.0",
     "i18next-resource-store-loader": "^0.1.2",
     "identity-obj-proxy": "3.0.0",
-    "jest": "24.9.0",
+    "jest": "^26.6.3",
     "jest-environment-jsdom-fourteen": "^1.0.1",
-    "jest-resolve": "24.9.0",
-    "jest-watch-typeahead": "0.4.2",
-    "mdi-material-ui": "^6.10.0",
-    "mini-css-extract-plugin": "^0.9.0",
+    "jest-resolve": "^26.6.2",
+    "jest-watch-typeahead": "^0.6.1",
+    "mdi-material-ui": "^6.22.0",
+    "mini-css-extract-plugin": "^1.5.0",
     "namor": "^2.0.2",
-    "node-sass": "^4.13.0",
-    "notistack": "^0.9.7",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
-    "pnp-webpack-plugin": "1.5.0",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "8.0.1",
+    "node-sass": "^4.14.1",
+    "notistack": "^1.0.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "pnp-webpack-plugin": "^1.6.4",
+    "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-loader": "^4.0.4",
+    "postcss-normalize": "^9.0.0",
     "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "4.0.1",
+    "postcss-safe-parser": "^5.0.2",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-apollo": "^3.1.3",
-    "react-app-polyfill": "^1.0.5",
-    "react-dev-utils": "^10.0.0",
-    "react-dom": "^16.12.0",
-    "react-final-form": "^6.3.3",
-    "react-i18next": "^11.2.7",
-    "react-joyride": "^2.2.1",
-    "react-router-dom": "^5.1.2",
-    "react-table": "^7.0.0-rc.15",
-    "react-window": "^1.8.5",
-    "resolve": "^1.14.2",
-    "resolve-url-loader": "3.1.1",
-    "sass-loader": "^8.0.1",
-    "semver": "^7.1.1",
-    "style-loader": "^1.1.2",
-    "terser-webpack-plugin": "^2.3.2",
-    "ts-pnp": "1.1.5",
-    "url-loader": "^3.0.0",
+    "react": "^17.0.2",
+    "react-app-polyfill": "^2.0.0",
+    "react-dev-utils": "^11.0.4",
+    "react-dom": "^17.0.2",
+    "react-final-form": "^6.5.3",
+    "react-i18next": "^11.8.13",
+    "react-joyride": "^2.3.0",
+    "react-router-dom": "^5.2.0",
+    "react-table": "^7.6.3",
+    "react-window": "^1.8.6",
+    "resolve": "^1.20.0",
+    "resolve-url-loader": "^3.1.2",
+    "sass-loader": "^10.0.4",
+    "semver": "^7.3.5",
+    "style-loader": "^2.0.0",
+    "terser-webpack-plugin": "^5.0.3",
+    "ts-pnp": "^1.2.0",
+    "url-loader": "^4.1.1",
     "webpack": "^4.41.5",
-    "webpack-dev-server": "^3.10.1",
+    "webpack-dev-server": "^3.11.2",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1"
+    "workbox-webpack-plugin": "^5.1.4"
   },
   "scripts": {
     "start": "node scripts/start.js",
